--- a/package.json
+++ b/package.json
@@ -3,8 +3,24 @@
   "version": "1.0.0",
   "description": "Resturant related APIs",
   "main": "index.js",
+  "engines": {
+   "node": "9.2.0",
+   "npm": "5.5.1"
+ },
   "scripts": {
+     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongodb": "^3.0.3",
+    "mongoose": "*"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
   },
   "repository": {
     "type": "git",
